--- a/index.html
+++ b/index.html
@@ -22,8 +22,21 @@
         <p class="view"><a href="https://github.com/arredores">View My GitHub Profile</a></p>
 
       </header>
+      
       <section>
-        <h3>Welcome to GitHub Pages.</h3>
+        <h2>Workflow para o site</h2>
+        
+<ol>
+  <li>Criar site</li>
+  <li>Gerar slides</li>
+  <li>Juntar tudo</li>
+</ol>
+
+        <h3>Ferramentas</>
+  <ol>
+	<li>Editor de texto</li>
+	<li>????</li>
+  </ol>
 
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
 
