--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <li>Juntar tudo</li>
 </ol>
 
-        <h3>Ferramentas</>
+        <h3>Ferramentas</h3>
   <ol>
 	<li>Editor de texto</li>
 	<li>????</li>
