--- a/index.html
+++ b/index.html
@@ -38,6 +38,15 @@
 	<li>????</li>
   </ol>
 
+        <p>Talvez escrever alguns parágrafos ajude a organizar este conteúdo. Gosto de formas pouco convencionais de apresentação. Vou utilizar listas de definição e slides em HTML.</p>
+        
+<dl>
+  <dt>Criar site</dt>
+  <dd>Um site que funcione como repositório do material que utilizo em sala de aula. Meus alunos terão acesso aos slides, ebooks e outros materiais de leitura aqui.</dd>
+  <dt>Gerar slide</dt>
+  <dd>O objetivo é gerar slides para todas as minhas aulas, de todas as disciplinas que ministro. Pretendo utilizar basicamente dois tipos de slides em HTML: DZslides (one-page file) e remark (que exige uma diretiva online).</dd>
+</dl>
+        
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
 
 <pre><code>$ cd your_repo_root/repo_name
