--- a/index.html
+++ b/index.html
@@ -35,10 +35,13 @@
         <h3>Ferramentas</h3>
   <ol>
 	<li>Editor de texto</li>
-	<li>????</li>
+    <li><a href="http://prose.io">prose.io</a></li>
+    <li>???</li>
   </ol>
 
         <p>Talvez escrever alguns parágrafos ajude a organizar este conteúdo. Gosto de formas pouco convencionais de apresentação. Vou utilizar listas de definição e slides em HTML.</p>
+        
+        <p>Um exemplo de página com slides está <a href=".../presentations/presentations.html>aqui</a>.
         
 <dl>
   <dt>Criar site</dt>
