--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
         <p>Talvez escrever alguns parágrafos ajude a organizar este conteúdo. Gosto de formas pouco convencionais de apresentação. Vou utilizar listas de definição e slides em HTML.</p>
         
-        <p>Um exemplo de página com slides está <a href="presentations/presentations.html>aqui</a>.
+        <p>Um exemplo de página com slides está aqui.
         
 <dl>
   <dt>Criar site</dt>
