--- a/index.html
+++ b/index.html
@@ -41,9 +41,11 @@
 
         <p>Talvez escrever alguns parágrafos ajude a organizar este conteúdo. Gosto de formas pouco convencionais de apresentação. Vou utilizar listas de definição e slides em HTML.</p>
         
-        <p>Um exemplo de página com slides está aqui.
+        <p>Um exemplo de página com slides está aqui. Mas repare na lista abaixo:
         
 <dl>
+  <dt><a href="http://arredores.github.com/edit/master/presentations/txt_01_ebooks.html"</a>O poder do txt 1 | ebooks</dt>
+    <dd>A importância dos ebooks para a educação.</dd>
   <dt>Criar site</dt>
   <dd>Um site que funcione como repositório do material que utilizo em sala de aula. Meus alunos terão acesso aos slides, ebooks e outros materiais de leitura aqui.</dd>
   <dt>Gerar slide</dt>
