--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@ $ git checkout gh-pages
       </section>
       <footer>
         <p><small>Texto Marcelo Stein | Hosted on GitHub Pages | Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p class="view"><small><a href="https://github.com/arredores">Texto por Marcelo Stein de Lima Sousa</a></small></p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
