--- a/index.html
+++ b/index.html
@@ -18,12 +18,7 @@
         <h1>pelos arredores</h1>
         <p>primeiro repositório</p>
         
-        <ul class="nav nav-list">
-  			<li class="active"><a href="#"><i class="icon-home"></i> Home</a></li>
-  			<li><a href="#"><i class="icon-book"></i> Library</a></li>
-  			<li><a href="#"><i class="icon-pencil"></i> Applications</a></li>
-  			<li><a href="#"><i class="icon-cogs"></i> Settings</a></li>
-		</ul>
+        <p><a href="http://fortawesome.github.com/Font-Awesome/">Falta integrar com Font Awesome</a></p>
 
 
       </header>
