--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ $ git checkout gh-pages
       </section>
       
       <footer>
-        <p><small>Texto Marcelo Stein | Hosted on GitHub Pages | Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p><small>Hosted on GitHub Pages | Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
         <p class="view"><small>Texto por <a href="https://github.com/arredores">Marcelo Stein de Lima Sousa</a></small></p>
       </footer>
     </div>
