--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>pelos arredores</h1>
+        <h1>Pelos Arredores</h1>
         <p>primeiro repositório</p>
         
 <!--
