--- a/aulas/labmm00.html
+++ b/aulas/labmm00.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-<title>2-2012 | DI55U M91 | Laboratório de Produção de Textos Multimídia</title>
+<title>2-2012 | DI55U M91 | Laborat&oacute;rio de Produ&ccedil;ão de Textos Multimídia</title>
 
 <xmp theme="cerulean" style="display:none;"> 
 
