--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
   <ol>
 	<li>Editor de texto</li>
     <li><a href="http://prose.io">prose.io</a></li>
+    <li><a href="http://gist.io/4310623">Como usar markdown no WriteMonkey</a>, em inglês</li>
     <li>???</li>
   </ol>
 
