--- a/aulas/index.html
+++ b/aulas/index.html
@@ -46,8 +46,8 @@
     <div class='left'>
       <h1>Ethics</h1>
       <ul>
-        <li><a href='https://github.com/arredores/aulas'>Aulas</a></li>
-        <li><a href='https://github.com/arredores/aulas/issues'>Questionamentos</a></li>
+        <li><a href='https://arredores.github.io'>Marcelo Stein de Lima Sousa</a></li>
+        <li><a href='https://arredores.github.io/aulas/index.html'>Aulas</a></li>
       </ul>
     </div>
     <div class='right'>
