--- a/aulas/index.html
+++ b/aulas/index.html
@@ -44,10 +44,10 @@
 
   <div class='header'>
     <div class='left'>
-      <h1>Ethics</h1>
+      <h1>Aulas</h1>
       <ul>
         <li><a href='https://arredores.github.io'>Marcelo Stein de Lima Sousa</a></li>
-        <li><a href='https://arredores.github.io/aulas/index.html'>Aulas</a></li>
+        <li><a href='https://arredores.github.io/aulas/index.html'>Neste semestre</a></li>
       </ul>
     </div>
     <div class='right'>
