--- a/aulas/index.html
+++ b/aulas/index.html
@@ -47,7 +47,7 @@
       <h1>Aulas</h1>
       <ul>
         <li><a href='https://arredores.github.io'>Marcelo Stein de Lima Sousa</a></li>
-        <li><a href='https://arredores.github.io/aulas/index.html'>Neste semestre</a></li>
+        <li><a href='https://arredores.github.io/aulas/index.html'>Semestres</a></li>
       </ul>
     </div>
     <div class='right'>
