--- a/aulas/etica.html
+++ b/aulas/etica.html
@@ -36,7 +36,7 @@
   <!-- Initializer -->
   <script>
 	Flatdoc.run({
-		fetcher: Flatdoc.file('ethics.md')
+		fetcher: Flatdoc.file('teste-pg2nivel-flatdoc.md')
 	});
   </script>
 </head>
