--- a/aulas/etica.html
+++ b/aulas/etica.html
@@ -25,9 +25,9 @@
   <script src='http://rstacruz.github.io/flatdoc/v/0.8.0/legacy.js'></script>
   <script src='http://rstacruz.github.io/flatdoc/v/0.8.0/flatdoc.js'></script>
 
-  <!-- Flatdoc theme -->
+  <!-- Flatdoc theme 
   <link  href='http://rstacruz.github.io/flatdoc/v/0.8.0/theme-white/style.css' rel='stylesheet'>
-  <script src='http://rstacruz.github.io/flatdoc/v/0.8.0/theme-white/script.js'></script>
+  <script src='http://rstacruz.github.io/flatdoc/v/0.8.0/theme-white/script.js'></script> -->
 
   <!-- Meta -->
   <meta content="Testando FlatDoc" property="og:title">
