--- a/aulas/straptest.html
+++ b/aulas/straptest.html
@@ -24,4 +24,4 @@ culpa qui officia deserunt mollit anim id est laborum.
 <script src="http://strapdownjs.com/v/0.2/strapdown.js"></script>
 </html>é A New Post
 
-Enter text in [Markdown](http://daringfireball.net/projects/markdown/). Use the toolbar above, or click the **?** button for formatting help.
+Enter text in [Markdown](http://daringfireball.net/projects/markdown/). Use the toolbar above, or click the **?** button for formatting help.</html>
