--- a/aulas/straptest.html
+++ b/aulas/straptest.html
@@ -3,22 +3,38 @@
 <title>Hello Strapdown</title>
 
 <xmp theme="cerulean" style="display:none;">
-# Markdown text goes in here
+Title:  Plano de aulas EEC 1-2013  
+Author: Marcelo Stein de Lima Sousa  
+Date:   June 2, 2013
 
-## Chapter 1
+# &Eacute;tica & Comunica&ccedil;&atilde;o
 
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-et dolore magna aliqua. 
+## Plano de aulas
+|(E)|**1/13**|S|T|Q|Q|S|S|D|Tema|Tarefa|
+|-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:---|:----|
+|1|**JUN** |03|**04**|**05**|**06**|07|08|09|Apresentação da disciplina / Edmodo| &mdash; |
+|2|    |10|**11**|**12**|**13**|14|15|16| O que é ética | &mdash; |
+|3|    |17|**18**|**19**|**20**|21|22|23| Entrevista com Renato Janine Ribeiro | Leitura da entrevista |
+|4|    |24|**25**|**26**|**27**|28|29|30| *Ethos* | &nbsp; |
+|5|**JUL** |01|**02**|**03**|**04**|05|06|07| Responsabilidade |  &nbsp; |
+|6|    |08|**09**|**10**|**11**|12|13|14| Antígona 1 |  &nbsp; |
+|*(F)*|    |*15*|*16*|*17*|*18*|*19*|*20*|*21*|**Férias**| Leitura de Antígona |
+|*(F)*|    |*22*|*23*|*24*|*25*|*26*|*27*|*28*|**Férias**| &nbsp; |
+|7|**AGO** |29|**30**|**31**|**01**|02|03|04| Antígona 2 |  &nbsp; |
+|8|    |05|**06**|**07**|**08**|09|10|11| Laços sociais | &nbsp; |
+|9|    |12|**13**|**14**|**15**|16|17|18| Globalização | Entrega rascunho do ensaio |
+|10|    |19|**20**|**21**|**22**|23|24|25| Individualismo | &nbsp; |
+|11|**SET** |26|**27**|**28**|**29**|30|31|01| *Seminários dos alunos* | Leitura de artigos da Organicom |
+|12|    |02|**03**|**04**|**05**|06|07|08| Desperdício | &nbsp; |
+|13|    |09|**10**|**11**|**12**|13|14|15| Corrupção | &nbsp; |
+|14|    |16|**17**|**18**|**19**|20|21|22| Coisa pública | &nbsp; |
+|15|    |23|**24**|**25**|**26**|27|28|29| Política | &nbsp; |
+|16|**OUT** |30|**01**|**02**|**03**|04|05|06| *Semana de comunica&ccedil;&atilde;o* | **Entrega do ensaio**
+|17|    |07|**08**|**09**|**10**|11|12|13| Avaliação | &nbsp; |
+|18|    |14|15|16|17|18|19|20| &nbsp; | &nbsp; |
 
-1. um
-1. dois
+**Legenda**: (E) = Encontros;Datas em negrito = **aulas**.
 
-### Chapter 2
-
-Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-culpa qui officia deserunt mollit anim id est laborum.
 </xmp>
 
 <script src="http://strapdownjs.com/v/0.2/strapdown.js"></script>
