--- a/aulas/plano-EEC-12013.html
+++ b/aulas/plano-EEC-12013.html
@@ -2,7 +2,7 @@
 <html>
 <title>&Eacute;tica & Comunica&ccedil;&atilde;o</title>
 
-<xmp theme="flatly" style="display:none;">
+<xmp theme="cerulean" style="display:none;">
 
 ## Conteúdo
 1. **Modificações**: Existem *diferenças em relação à ementa atual* e elas estão relacionadas a *atualizações* que o professor efetuou. Como nenhum corpo de conhecimento é estático, a cada semestre ele é reformulado. A matriz que dá origem às ementas, no entanto, é reformulada em períodos maiores de tempo.
