--- a/aulas/plano-EEC-12013.html
+++ b/aulas/plano-EEC-12013.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>&Eacute;tica & Comunica&ccedil;&atilde;o</title>
+<title>&Eacute;tica & Comunica&ccedil;&atilde;o | 1-2013 | Prof. Marcelo Stein de Lima Sousa</title>
 
 <xmp theme="cerulean" style="display:none;">
 
