--- a/aulas/plano-EEC-12013.html
+++ b/aulas/plano-EEC-12013.html
@@ -4,57 +4,65 @@
 
 <xmp theme="cerulean" style="display:none;">
 
-## Conteúdo
-1. **Modificações**: Existem *diferenças em relação à ementa atual* e elas estão relacionadas a *atualizações* que o professor efetuou. Como nenhum corpo de conhecimento é estático, a cada semestre ele é reformulado. A matriz que dá origem às ementas, no entanto, é reformulada em períodos maiores de tempo.
-1. **Leituras**: A bibliografia indicada deve ser vista como *ponto de partida* para outras leituras. Espera-se que o aluno leia tudo que for indicado como *leitura obrigatória*. Ao longo do semestre, o professor irá indicar, conforme a necessidade, outras leituras e também sites na web, literatura de ficção e não-ficção, jornais, revistas, periódicos científicos, exposições, filmes. Todo este material será escolhido tendo em conta facilidade de acesso e interesse para a disciplina.
+## Conte&uacute;do
+1. **Modifica&ccedil;&otilde;es**: Existem *diferen&ccedil;as em rela&ccedil;&atilde;o &agrave; ementa atual* e elas est&atilde;o relacionadas a *atualiza&ccedil;&otilde;es* que o professor efetuou. Como nenhum corpo de conhecimento &eacute; est&aacute;tico, a cada semestre ele &eacute; reformulado. A matriz que d&aacute; origem &agrave;s ementas, no entanto, &eacute; reformulada em per&iacute;odos maiores de tempo.
+1. **Leituras**: A bibliografia indicada deve ser vista como *ponto de partida* para outras leituras. Espera-se que o aluno leia tudo que for indicado como *leitura obrigat&oacute;ria*. Ao longo do semestre, o professor ir&aacute; indicar, conforme a necessidade, outras leituras e tamb&eacute;m sites na web, literatura de fic&ccedil;&atilde;o e n&atilde;o-fic&ccedil;&atilde;o, jornais, revistas, peri&oacute;dicos cient&iacute;ficos, exposi&ccedil;&otilde;es, filmes. Todo este material ser&aacute; escolhido tendo em conta facilidade de acesso e interesse para a disciplina.
 
 ## Encontros
-1. **Atrasos**: O professor não negocia faltas. Os alunos estão resguardados pelo Regimento da Universidade, e devem se ater a seu cumprimento. Em relação a atrasos, a tolerância adotada é a que se segue:
-    - **Aulas**: tolerância de 15 minutos (após este período, será considerado falta na aula em que se chegou atrasado).
-    - **Entrega de trabalhos**: Sem tolerãncia. Após a data determinada, os trabalhos solicitados não serão aceitos.
-    - **Tarefas**: Todas as tarefas solicitadas serão entregues pelo sistema online adotado pelo professor (o Edmodo). Se ocorrerem atrasos, haverá desconto de pontuação em relação ao valor máximo atribuído à tarefa.  
-Reparem que estou diferenciando tarefas e trabalhos. As primeiras se referem a atividades de breve duração solicitadas em sala de aula e que devem ser executadas em sala de aula. Os trabalhos implicam em leitura, escrita, e dedicação além da sala de aula.
-1. **Atendimento**: Os alunos que desejarem agendar um encontro com o professor para mais explicações sobre os temas desenvolvidos em sala de aula, podem solicitar o encontro (pessoalmente ou pelo sistema online) de acordo com os horários de atendimento ao aluno informados na Secretaria do Departamento.
+1. **Atrasos**: O professor n&atilde;o negocia faltas. Os alunos est&atilde;o resguardados pelo Regimento da Universidade, e devem se ater a seu cumprimento. Em rela&ccedil;&atilde;o a atrasos, a toler&acirc;ncia adotada &eacute; a que se segue:
+    - **Aulas**: toler&acirc;ncia de 15 minutos (ap&oacute;s este per&iacute;odo, ser&aacute; considerado falta na aula em que se chegou atrasado).
+    - **Entrega de trabalhos**: Sem toler&acirc;ncia. Ap&oacute;s a data determinada, os trabalhos solicitados n&atilde;o ser&atilde;o aceitos.
+    - **Tarefas**: Todas as tarefas solicitadas ser&atilde;o entregues pelo sistema online adotado pelo professor (o Edmodo). Se ocorrerem atrasos, haver&aacute; desconto de pontua&ccedil;&atilde;o em rela&ccedil;&atilde;o ao valor m&aacute;ximo atribu&iacute;do &agrave; tarefa.  
+Reparem que estou diferenciando tarefas e trabalhos. As primeiras se referem a atividades de breve dura&ccedil;&atilde;o solicitadas em sala de aula e que devem ser executadas em sala de aula. Os trabalhos implicam em leitura, escrita, e dedica&ccedil;&atilde;o al&eacute;m da sala de aula.
+1. **Atendimento**: Os alunos que desejarem agendar um encontro com o professor para mais explica&ccedil;&otilde;es sobre os temas desenvolvidos em sala de aula, podem solicitar o encontro (pessoalmente ou pelo sistema online) de acordo com os hor&aacute;rios de atendimento ao aluno informados na Secretaria do Departamento.
 
 ## Atividades
-1. **Participação**: Espera-se que os alunos participem ativamente das aulas, seja ao executarem as atividades solicitadas, seja com perguntas ou com contribuições espontâneas que enriqueçam a dinâmica dos encontros. Necessariamente, a estas contribuições não serão atribuídas pontuações explícitas para a avaliação, apesar de serem levadas em conta quando do estabelecimento da nota final. As normas de civilidade e decoro utilizadas em outros ambientes (por exemplo, a residência de cada aluno), deverão ser seguidas e adotadas em sala de aula.
-1. **Dúvidas**: Quaisquer dúvidas poderão ser dirrimidas em sala de aula a qualquer momento: o momento *certo* é aquele em que o aluno tiver necessidade. Não existem perguntas triviais ou &slquote;idiotas&srquote;. Outra possibilidade, se o aluno desejar, é a utilização do sistema online adotado pelo professor a comunicação com os alunos (o Edmodo). O aluno, no entanto, deve estar ciente que, dependendo da demanda, a resposta poderá demorar alguns dias.
+1. **Participa&ccedil;&atilde;o**: Espera-se que os alunos participem ativamente das aulas, seja ao executarem as atividades solicitadas, seja com perguntas ou com contribui&ccedil;&otilde;es espont&acirc;neas que enrique&ccedil;am a din&acirc;mica dos encontros. Necessariamente, a estas contribui&ccedil;&otilde;es n&atilde;o ser&atilde;o atribu&iacute;das pontua&ccedil;&otilde;es expl&iacute;citas para a avalia&ccedil;&atilde;o, apesar de serem levadas em conta quando do estabelecimento da nota final. As normas de civilidade e decoro utilizadas em outros ambientes (por exemplo, a resid&ecirc;ncia de cada aluno), dever&atilde;o ser seguidas e adotadas em sala de aula.
+1. **D&uacute;vidas**: Quaisquer d&uacute;vidas poder&atilde;o ser dirrimidas em sala de aula a qualquer momento: o momento *certo* &eacute; aquele em que o aluno tiver necessidade. N&atilde;o existem perguntas triviais ou &slquote;idiotas&srquote;. Outra possibilidade, se o aluno desejar, &eacute; a utiliza&ccedil;&atilde;o do sistema online adotado pelo professor a comunica&ccedil;&atilde;o com os alunos (o Edmodo). O aluno, no entanto, deve estar ciente que, dependendo da demanda, a resposta poder&aacute; demorar alguns dias.
 
 ## Plano de aulas
 |(E)|**1/13**|S|T|Q|Q|S|S|D|Tema|Tarefa|
 |-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:---|:----|
-|1|**JUN** |03|**04**|**05**|**06**|07|08|09|Apresentação da disciplina / Edmodo| &nbsp; |
-|2|    |10|**11**|**12**|**13**|14|15|16| O que é ética | &nbsp; |
+|1|**JUN** |03|**04**|**05**|**06**|07|08|09|Apresenta&ccedil;&atilde;o da disciplina / Edmodo| &nbsp; |
+|2|    |10|**11**|**12**|**13**|14|15|16| O que &eacute; &eacute;tica | &nbsp; |
 |3|    |17|**18**|**19**|**20**|21|22|23| Entrevista com Renato Janine Ribeiro | Leitura da entrevista |
 |4|    |24|**25**|**26**|**27**|28|29|30| *Ethos* | &nbsp; |
 |5|**JUL** |01|**02**|**03**|**04**|05|06|07| Responsabilidade |  &nbsp; |
-|6|    |08|**09**|**10**|**11**|12|13|14| Antígona 1 |  &nbsp; |
-|*(F)*|    |*15*|*16*|*17*|*18*|*19*|*20*|*21*|**Férias**| Leitura de Antígona |
-|*(F)*|    |*22*|*23*|*24*|*25*|*26*|*27*|*28*|**Férias**| &nbsp; |
-|7|**AGO** |29|**30**|**31**|**01**|02|03|04| Antígona 2 |  &nbsp; |
-|8|    |05|**06**|**07**|**08**|09|10|11| Laços sociais | &nbsp; |
-|9|    |12|**13**|**14**|**15**|16|17|18| Globalização | Entrega rascunho do ensaio |
+|6|    |08|**09**|**10**|**11**|12|13|14| Ant&iacute;gona 1 |  &nbsp; |
+|*(F)*|    |*15*|*16*|*17*|*18*|*19*|*20*|*21*|**F&eacute;rias**| Leitura de Ant&iacute;gona |
+|*(F)*|    |*22*|*23*|*24*|*25*|*26*|*27*|*28*|**F&eacute;rias**| &nbsp; |
+|7|**AGO** |29|**30**|**31**|**01**|02|03|04| Ant&iacute;gona 2 |  &nbsp; |
+|8|    |05|**06**|**07**|**08**|09|10|11| La&ccedil;os sociais | &nbsp; |
+|9|    |12|**13**|**14**|**15**|16|17|18| Globaliza&ccedil;&atilde;o | Entrega rascunho do ensaio |
 |10|    |19|**20**|**21**|**22**|23|24|25| Individualismo | &nbsp; |
-|11|**SET** |26|**27**|**28**|**29**|30|31|01| *Seminários dos alunos* | Leitura de artigos da Organicom |
-|12|    |02|**03**|**04**|**05**|06|07|08| Desperdício | &nbsp; |
-|13|    |09|**10**|**11**|**12**|13|14|15| Corrupção | &nbsp; |
-|14|    |16|**17**|**18**|**19**|20|21|22| Coisa pública | &nbsp; |
-|15|    |23|**24**|**25**|**26**|27|28|29| Política | &nbsp; |
+|11|**SET** |26|**27**|**28**|**29**|30|31|01| *Semin&aacute;rios dos alunos* | Leitura de artigos da Organicom |
+|12|    |02|**03**|**04**|**05**|06|07|08| Desperd&iacute;cio | &nbsp; |
+|13|    |09|**10**|**11**|**12**|13|14|15| Corrup&ccedil;&atilde;o | &nbsp; |
+|14|    |16|**17**|**18**|**19**|20|21|22| Coisa p&uacute;blica | &nbsp; |
+|15|    |23|**24**|**25**|**26**|27|28|29| Pol&iacute;tica | &nbsp; |
 |16|**OUT** |30|**01**|**02**|**03**|04|05|06| *Semana de comunica&ccedil;&atilde;o* | **Entrega do ensaio**
-|17|    |07|**08**|**09**|**10**|11|12|13| Avaliação | &nbsp; |
+|17|    |07|**08**|**09**|**10**|11|12|13| Avalia&ccedil;&atilde;o | &nbsp; |
 |18|    |14|15|16|17|18|19|20| &nbsp; | &nbsp; |
 
 **Legenda**: (E) = Encontros;Datas em negrito = **aulas**.
 
-## Avaliação
-1. **Critérios de avaliação**: Os alunos serão avaliados a partir da produção de material escrito, de apresentações públicas em seminários, e de sua participação nas discussões em sala de aula. Os pesos atribuídos a cada uma destas atividades estão definidos a seguir:
+## Avalia&ccedil;&atilde;o
+1. **Crit&eacute;rios de avalia&ccedil;&atilde;o**: Os alunos ser&atilde;o avaliados a partir da produ&ccedil;&atilde;o de material escrito, de apresenta&ccedil;&otilde;es p&uacute;blicas em semin&aacute;rios, e de sua participa&ccedil;&atilde;o nas discuss&otilde;es em sala de aula. Os pesos atribu&iacute;dos a cada uma destas atividades est&atilde;o definidos a seguir:
     - Tarefas = Peso 1
     - Rascunho do Ensaio = Peso 2
-    - Apresentações = Peso 2
+    - Apresenta&ccedil;&otilde;es = Peso 2
     - Ensaio final = Peso 5
-A somatória das notas ponderadas corresponde à nota final do aluno.
-1. **Atividades perante público**: Quando forem solicitadas atividades orais desta natureza, tanto para públicos internos (os colegas), quanto para públicos externos (outros professores ou eventos), elas serão avaliadas segundo critérios específicos em relação a conteúdo, postura discursiva, e adequação gestual que serão informados aos alunos anteriormente à atividade.
-1. **Material escrito**: Quando solicitado, deve seguir a norma culta vigente. Outros detalhes em relação à sua entrega serão oportunamente divulgados.
+A somat&oacute;ria das notas ponderadas corresponde &agrave; nota final do aluno.
+1. **Atividades perante p&uacute;blico**: Quando forem solicitadas atividades orais desta natureza, tanto para p&uacute;blicos internos (os colegas), quanto para p&uacute;blicos externos (outros professores ou eventos), elas ser&atilde;o avaliadas segundo crit&eacute;rios espec&iacute;ficos em rela&ccedil;&atilde;o a conte&uacute;do, postura discursiva, e adequa&ccedil;&atilde;o gestual que ser&atilde;o informados aos alunos anteriormente &agrave; atividade.
+1. **Material escrito**: Quando solicitado, deve seguir a norma culta vigente. Outros detalhes em rela&ccedil;&atilde;o &agrave; sua entrega ser&atilde;o oportunamente divulgados.
+  
+  ## Endere&ccedil;os
+
+  Alguns sites ser&atilde;o utilizados durante o semestre. A seguir, a lista dos principais. Outros poder&atilde;o ser sugeridos no decorrer da disciplina.
+  1. [Edmodo](http://www.edmodo.com), um twitter para sala de aula;
+  1. [Arredores](http://arredores.github.io/aulas/plano-EEC-12013.html), onde est&aacute; este arquivo;
+  1. [pagi](http://pagi.wikidot.com), onde eventualmente estar&atilde;o dispon&iacute;veis material adicional para as aulas.
+
 </xmp>
 
 <script src="http://strapdownjs.com/v/0.2/strapdown.js"></script>
