--- a/aulas/plano-EEC-12013.html
+++ b/aulas/plano-EEC-12013.html
@@ -55,8 +55,11 @@ Reparem que estou diferenciando tarefas e trabalhos. As primeiras se referem a a
 A somat&oacute;ria das notas ponderadas corresponde &agrave; nota final do aluno.
 1. **Atividades perante p&uacute;blico**: Quando forem solicitadas atividades orais desta natureza, tanto para p&uacute;blicos internos (os colegas), quanto para p&uacute;blicos externos (outros professores ou eventos), elas ser&atilde;o avaliadas segundo crit&eacute;rios espec&iacute;ficos em rela&ccedil;&atilde;o a conte&uacute;do, postura discursiva, e adequa&ccedil;&atilde;o gestual que ser&atilde;o informados aos alunos anteriormente &agrave; atividade.
 1. **Material escrito**: Quando solicitado, deve seguir a norma culta vigente. Outros detalhes em rela&ccedil;&atilde;o &agrave; sua entrega ser&atilde;o oportunamente divulgados.
-  
-  ## Endere&ccedil;os
+
+## Bibliografia
+- Renato Janine Ribeiro (2008), &ldquot;[Entrevista](http://revistaorganicom.org.br/sistema/index.php/organicom/article/view/151)&rdquot;, *Revista Organicom*, 5(8), 161-169. Arquivo em formato PDF, 125kB.
+
+## Endere&ccedil;os
 
 Alguns sites ser&atilde;o utilizados durante o semestre. A seguir, a lista dos principais. Outros poder&atilde;o ser sugeridos no decorrer da disciplina.
 1. [Edmodo](http://www.edmodo.com), um twitter para sala de aula;
