--- a/aulas/plano-EEC-12013.html
+++ b/aulas/plano-EEC-12013.html
@@ -57,11 +57,12 @@ A somat&oacute;ria das notas ponderadas corresponde &agrave; nota final do aluno
 1. **Material escrito**: Quando solicitado, deve seguir a norma culta vigente. Outros detalhes em rela&ccedil;&atilde;o &agrave; sua entrega ser&atilde;o oportunamente divulgados.
 
 ## Bibliografia
-- Renato Janine Ribeiro (2008), &ldquot;[Entrevista](http://revistaorganicom.org.br/sistema/index.php/organicom/article/view/151)&rdquot;, *Revista Organicom*, 5(8), 161-169. Arquivo em formato PDF, 125kB.
+- Renato Janine Ribeiro (2008), &quot;[Entrevista](http://revistaorganicom.org.br/sistema/index.php/organicom/article/view/151)&quot;, *Revista Organicom*, 5(8), 161-169. Arquivo em formato PDF, 125kB.
 
 ## Endere&ccedil;os
 
 Alguns sites ser&atilde;o utilizados durante o semestre. A seguir, a lista dos principais. Outros poder&atilde;o ser sugeridos no decorrer da disciplina.
+
 1. [Edmodo](http://www.edmodo.com), um twitter para sala de aula;
 1. [Arredores](http://arredores.github.io/aulas/plano-EEC-12013.html), onde est&aacute; este arquivo;
 1. [pagi](http://pagi.wikidot.com), onde eventualmente estar&atilde;o dispon&iacute;veis material adicional para as aulas.
