--- a/aulas/plano-LabMM-12013.html
+++ b/aulas/plano-LabMM-12013.html
@@ -1,4 +1,8 @@
-# Laborat&oacute;rio de Textos Multim&iacute;dia
+<!DOCTYPE html>
+<html>
+<title>Laborat&oacute;rio de Textos Multim&iacute;dia | 1/2013 | Prof. Marcelo Stein de Lima Sousa | DAVEX/UTFPR</title>
+
+<xmp theme="cerulean" style="display:none;">
 
 ## Conte&uacute;do
 1. **Modifica&ccedil;&otilde;es**: Existem *diferen&ccedil;as em rela&ccedil;&atilde;o &agrave; ementa atual* e elas est&atilde;o relacionadas a *atualiza&ccedil;&otilde;es* que o professor efetuou. Como nenhum corpo de conhecimento &eacute; est&aacute;tico, a cada semestre ele &eacute; reformulado. A matriz que d&aacute; origem &agrave;s ementas, no entanto, &eacute; reformulada em per&iacute;odos maiores de tempo.
