--- a/aulas/plano-LabMM-12013.html
+++ b/aulas/plano-LabMM-12013.html
@@ -68,3 +68,7 @@ Alguns sites ser&atilde;o utilizados durante o semestre. A seguir, a lista dos p
 1. [Edmodo](http://www.edmodo.com), um twitter para sala de aula;
 1. [Arredores](http://arredores.github.io/aulas/plano-EEC-12013.html), onde est&aacute; este arquivo;
 1. [pagi](http://pagi.wikidot.com), onde eventualmente estar&atilde;o dispon&iacute;veis material adicional para as aulas.
+</xmp>
+
+<script src="http://strapdownjs.com/v/0.2/strapdown.js"></script>
+</html>
