--- a/aulas/labmm-12013.html
+++ b/aulas/labmm-12013.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>plano LabMM 12013.md</title>
+<title>plano LabMM | 1-2013</title>
 <meta name="description" content="This file was exported from WriteMonkey editor.">
 <style type="text/css">
 /* Extracted and interpreted from adcstyle.css and frameset_styles.css */
@@ -231,7 +231,22 @@ textarea {
 
 </head>
 <body>
-<h1>Laborat&oacute;rio de Textos Multim&iacute;dia</h1>
+<table>
+<thead>
+<tr>
+	<th align="center">DI55U</th>
+	<th align="left">Laborat&oacute;rio de Textos Multim&iacute;dia</th>
+	<th align="center">1/2013</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+	<td align="center"><strong>Plano</strong></td>
+	<td align="left">Prof. Marcelo Stein de Lima Sousa</td>
+	<td align="center">DACEX/UTFPR</td>
+</tr>
+</tbody>
+</table>
 <h2>Conte&uacute;do</h2>
 <ol>
 <li><strong>Modifica&ccedil;&otilde;es</strong>: Existem <em>diferen&ccedil;as em rela&ccedil;&atilde;o &agrave; ementa atual</em> e elas est&atilde;o relacionadas a <em>atualiza&ccedil;&otilde;es</em> que o professor efetuou. Como nenhum corpo de conhecimento &eacute; est&aacute;tico, a cada semestre ele &eacute; reformulado. A matriz que d&aacute; origem &agrave;s ementas, no entanto, &eacute; reformulada em per&iacute;odos maiores de tempo.</li>
@@ -567,3 +582,4 @@ A somat&oacute;ria das notas ponderadas corresponde &agrave; nota final do aluno
 
 </body>
 </html>
+
